BI-13524: Check for and document required environment variables for consumer.