@@ -25,6 +25,7 @@
         <private-api-sdk-java.version>4.0.40</private-api-sdk-java.version>
         <kafka-models.version>3.0.7</kafka-models.version>
         <ch-kafka.version>3.0.1</ch-kafka.version>
+        <system-lambda.version>1.2.1</system-lambda.version>
 
         <!-- TODO BI-13524 Do we need these? -->
         <skip.unit.tests>false</skip.unit.tests>
@@ -219,6 +220,12 @@
             <artifactId>junit-platform-commons</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-lambda</artifactId>
+            <version>${system-lambda.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -255,6 +262,10 @@
                     <excludes>
                         <exclude>**/Runner.java</exclude>
                     </excludes>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
